tests/snapshots/ansi__ansi_flag_disabled@color002.snap
---
source: tests/ansi.rs
description: "input: bytes b\"plain\\n\\x1b[31mred\\x1b[0m\\n\\x1b[32mgreen\\x1b[0m\\n\"\noptions: "
---
(21, 0..1) ">" fg=Indexed(161)
(21, 1..2) " " fg=Indexed(168)
(21, 2..7) "?[31m" bg=Indexed(236)
(21, 7..10) "red" fg=Indexed(151) bg=Indexed(236)
(21, 10..14) "?[0m" bg=Indexed(236)
(22, 0..5) "  1/3" fg=Indexed(144)
(22, 77..80) "0/0" fg=Indexed(144)
(23, 0..2) "> " fg=Indexed(110)
