tests/snapshots/ansi__ansi_flag_enabled@color002.snap
---
source: tests/ansi.rs
description: "input: bytes b\"plain\\n\\x1b[31mred\\x1b[0m\\n\\x1b[32mgreen\\x1b[0m\\n\"\noptions: --ansi --color current_match_bg:1,current_bg:2"
---
(21, 0..1) ">" fg=Indexed(161)
(21, 1..2) " " fg=Indexed(168)
(21, 2..4) "re" fg=Red bg=Indexed(2)
(21, 4..5) "d" fg=Indexed(151) bg=Indexed(1)
(22, 0..5) "  1/3" fg=Indexed(144)
(22, 77..80) "0/0" fg=Indexed(144)
(23, 0..2) "> " fg=Indexed(110)
