tests/snapshots/ansi__ansi_flag_no_strip@001.snap
---
source: tests/ansi.rs
description: "input: bytes b\"plain\\n\\x1b[31mred\\x1b[0m\\n\\x1b[32mgreen\\x1b[0m\\n\"\noptions: --ansi --no-strip-ansi --color current_match_bg:1,current_bg:2\nafter:\n  @type \"d\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> red                                                                           "
"  1/3                                                                        0/0"
"> d                                                                             "
cursor: (24, 4)
