tests/snapshots/ansi__ansi_hide_nth@001.snap
---
source: tests/ansi.rs
description: "input: bytes b\"\\x1b[32mgreen\\x1b[0m \\x1b[31mred\\x1b[0m plain\\n\"\noptions: --ansi --delimiter   --hide-nth 2"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> green plain                                                                   "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
