tests/snapshots/ansi__ansi_hide_nth@color002.snap
---
source: tests/ansi.rs
description: "input: bytes b\"\\x1b[32mgreen\\x1b[0m \\x1b[31mred\\x1b[0m plain\\n\"\noptions: --ansi --delimiter   --hide-nth 2"
---
(21, 0..1) ">" fg=Indexed(161)
(21, 1..2) " " fg=Indexed(168)
(21, 2..7) "green" fg=Green bg=Indexed(236)
(21, 7..13) " plain" bg=Indexed(236)
(22, 0..5) "  1/1" fg=Indexed(144)
(22, 77..80) "0/0" fg=Indexed(144)
(23, 0..2) "> " fg=Indexed(110)
