tests/snapshots/ansi__ansi_matching_on_stripped_text@001.snap
---
source: tests/ansi.rs
description: "input: bytes b\"\\x1b[32mgreen\\x1b[0m text\\n\\x1b[31mred\\x1b[0m text\\nplain text\\n\"\noptions: --ansi\nafter:\n  @type \"text\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  plain text                                                                    "
"  green text                                                                    "
"> red text                                                                      "
"  3/3                                                                        0/0"
"> text                                                                          "
cursor: (24, 7)
