tests/snapshots/ansi__ansi_matching_on_stripped_text@003.snap
---
source: tests/ansi.rs
description: "input: bytes b\"\\x1b[32mgreen\\x1b[0m text\\n\\x1b[31mred\\x1b[0m text\\nplain text\\n\"\noptions: --ansi\nafter:\n  @ctrl 'u'\n  @type \"green\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> green text                                                                    "
"  1/3                                                                        0/0"
"> green                                                                         "
cursor: (24, 8)
